--- a/Web/CSS/AddFilm.css
+++ b/Web/CSS/AddFilm.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../images/95606.jpg");
+  background-image: url("../images/outer-space-background.jpg");
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
