--- a/Web/CSS/AddActor.css
+++ b/Web/CSS/AddActor.css
@@ -1,6 +1,6 @@
 body {
     
-    background-image:url('../AddActor/actor.PNG');
+    background-image:url('../images/actorbackground.png');
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
