--- a/Web/CSS/Addprize.css
+++ b/Web/CSS/Addprize.css
@@ -9,14 +9,14 @@ body {
     color: white;
     font-size: x-large;
     
-  }
+}
   .navbar{
       background-color: #ffffffb9;
       font-family: 'Langar', cursive;
       font-size: xx-large;
       font-weight: bold;
      color:rgb(41 14 60);
-  }  
+}  
   .navbar-brand{
       margin-left:3%;
   }
@@ -31,8 +31,8 @@ body {
 form{
     margin-top: 20%;
 }
-.button{
-margin-top: 30px;
+.row{
+    margin-bottom: 25px;
 }
 
 @media (max-width: 470px) { 
