some edit on front

--- a/Web/Home_movies/assets/css/styles.css
+++ b/Web/Home_movies/assets/css/styles.css
@@ -4,7 +4,10 @@
   background-color: #21212e;
   border-color: #007bff;
 }
-
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 .bg-white {
   background-color: rgba(137,96,196,0.56)!important;
 }
@@ -14,7 +17,7 @@
 }
 
 body {
-  margin: 0;
+
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
@@ -22,5 +25,6 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
+
 }
 
